--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-body { display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; }
-
 .attribution {
     font-size: 11px;
     text-align: center;
@@ -13,6 +11,11 @@ body {
     background-color: hsl(212, 45%, 89%);
     text-align: center;
     font-family: "Outfit", sans-serif;
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 h2{
